--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "usepaginatecollection",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React Hook for realtime Firestore collection pagination",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "/dist"
+  ],
+  "keywords": [
+    "react",
+    "reactjs",
+    "firebase",
+    "firestore",
+    "firestore-collection",
+    "firebase-firestore",
+    "react-hooks"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
